Fix refine search checkbox alignment

--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -60,7 +60,7 @@
 .field {
   display: flex;
   position: realtive;
-  margin: 5em auto;
+  margin: 5px auto;
   width: 70%;
   flex-direction: row;
   box-shadow: 1px 1px 0 #00A0DC, 2px 2px 0 #00A0DC, 3px 3px 0 #00A0DC, 4px 4px 0 #00A0DC, 5px 5px 0 #00A0DC, 6px 6px 0 #00A0DC, 7px 7px 0 #00A0DC; }
